# Hackathon-1-Backend

./: Procfile  README.md  main.py  pyproject.toml  requirements.txt
humanoid_robotics_rag_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_main.py
